--- a/config.ini
+++ b/config.ini
@@ -1,19 +1,15 @@
-#!/usr/bin/env python
-# encoding: utf-8
-
-# Flask Config
 [web]
 DEBUG = True
 HOST = 0.0.0.0
 PORT = 48404
 JSON_AS_ASCII = False
 
-# MongoDB Config
 [db]
 dbname = ssmonitor
 hostname = localhost
 port = 27017
 
-# Other Config
 [other]
-infofilepath = temp.json
+info_file_path = /etc/shadowsocks.json
+is_watching = 1
+
