--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
-Click==7.0
+APScheduler==2.1.2
+argparse==1.4.0
+click==6.7
 configparser==3.5.0
 Flask==1.0.2
 Flask-Cors==3.0.6
 Flask-Failsafe==0.2
+importlib==1.0.4
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+ordereddict==1.1
 pymongo==3.7.2
+pytz==2018.5
 six==1.11.0
+tzlocal==1.5.1
 Werkzeug==0.14.1
