实现流量定时监控和数据的持久化

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [web]
-DEBUG = True
+DEBUG = False
 HOST = 0.0.0.0
 PORT = 48404
 JSON_AS_ASCII = False
@@ -11,5 +11,5 @@ port = 27017
 
 [other]
 info_file_path = /etc/shadowsocks.json
-is_watching = 1
+is_watching = 0
 
